[tool.poetry]
name = "leafhopper"
version = "0.1.0"
description = ""
authors = ["Yue Ni <niyue.com@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytablewriter = {extras = ["html"], version = "^0.64.2"}

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
leafhopper = 'leafhopper.main:main'