[tool.poetry]
name = "leafhopper"
version = "0.5.1"
description = "A command line tool for generating project dependencies table"
authors = ["Yue Ni <niyue.com@gmail.com>"]
homepage = "https://github.com/niyue/leafhopper"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytablewriter = {extras = ["html"], version = "^0.64.2"}
tomli = "^2.0.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
leafhopper = 'leafhopper.main:main'